@@ -1,8 +1,15 @@
 plugins {
     id "application"
     id "com.github.johnrengelman.shadow" version "7.1.2"
-    id "com.install4j.gradle" version "11.0.5"
+    id "com.install4j.gradle" version "12.0"
     id "de.undercouch.download" version "5.6.0"
+}
+
+application {
+    applicationDefaultJvmArgs = [
+            //This flag fixes touch gestures in Java-21；Technical Reference: https://stackoverflow.com/questions/48535595/what-replaces-gestureutilities-in-java-9
+            "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED"
+    ]
 }
 
 archivesBaseName = "$group-$name"
